--- a/index.html
+++ b/index.html
@@ -15,21 +15,19 @@
             background-color: #f5f7fa;
             color: #333;
             line-height: 1.8;
-            max-width: 1100px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 40px 20px;
         }
-        .resume-card {
+        .resume-container {
             background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.07);
+            border-radius: 8px;
             padding: 50px;
         }
+        /* 头部信息 */
         .header {
             text-align: center;
-            margin-bottom: 45px;
-            padding-bottom: 25px;
-            border-bottom: 1px solid #f0f0f0;
+            margin-bottom: 40px;
         }
         .avatar {
             width: 140px;
@@ -39,18 +37,18 @@
             margin: 0 auto 20px;
             border: 2px solid #e6f7ff;
         }
-        .fullname {
+        .name {
             font-size: 32px;
             color: #222;
-            margin-bottom: 12px;
+            margin-bottom: 10px;
             font-weight: 700;
         }
-        .contact-info {
+        .contact {
             font-size: 15px;
             color: #666;
-            margin-bottom: 8px;
+            margin-bottom: 5px;
         }
-        .job-target {
+        .job-intention {
             display: inline-block;
             margin-top: 15px;
             padding: 7px 22px;
@@ -60,38 +58,73 @@
             font-size: 16px;
             font-weight: 500;
         }
-        .section {
-            margin-bottom: 40px;
-        }
+        /* 板块标题 */
         .section-title {
             font-size: 20px;
             color: #1890ff;
-            margin-bottom: 20px;
-            padding-left: 10px;
-            border-left: 4px solid #1890ff;
+            margin: 40px 0 20px;
             font-weight: 600;
+            border-bottom: 1px solid #f0f0f0;
+            padding-bottom: 10px;
         }
-        .experience-item, .education-item {
-            margin-bottom: 28px;
+        /* 教育背景 */
+        .edu-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
         }
-        .item-header {
+        .edu-school {
+            font-size: 16px;
+            color: #222;
+        }
+        .edu-time {
+            font-size: 14px;
+            color: #888;
+        }
+        .course-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            margin-top: 10px;
+        }
+        .course-tag {
+            padding: 5px 14px;
+            background-color: #f0f8fb;
+            color: #1890ff;
+            border-radius: 18px;
+            font-size: 14px;
+        }
+        /* 实习经历 - 核心布局：公司靠左、岗位居中、时间靠右 */
+        .intern-item {
+            margin-bottom: 25px;
+        }
+        .intern-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             margin-bottom: 10px;
+        }
+        .intern-company {
+            font-size: 16px;
+            color: #222;
             font-weight: 500;
         }
-        .position-company, .major-school {
-            color: #222;
+        .intern-position {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
             font-size: 16px;
+            color: #222;
+            font-weight: 500;
         }
-        .time-period {
-            color: #888;
+        .intern-time {
             font-size: 14px;
+            color: #888;
         }
-        .item-content {
-            color: #555;
+        .intern-content {
             font-size: 15px;
+            color: #555;
             margin-left: 20px;
         }
         ul {
@@ -101,116 +134,116 @@
         li {
             margin-bottom: 8px;
         }
-        .course-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 12px;
-            margin-top: 12px;
+        /* 校园经历、技能、自我评价 */
+        .other-section {
+            margin: 30px 0;
         }
-        .course-tag {
-            padding: 5px 14px;
-            background-color: #f0f8fb;
-            color: #1890ff;
-            border-radius: 18px;
-            font-size: 14px;
+        .other-content {
+            font-size: 15px;
+            color: #555;
+            margin-left: 20px;
         }
+        /* 响应式适配 */
         @media (max-width: 768px) {
-            .resume-card {
+            .resume-container {
                 padding: 30px 15px;
             }
-            .fullname {
-                font-size: 28px;
+            .intern-position {
+                position: static;
+                transform: none;
+                margin: 5px 0;
+                text-align: left;
             }
-            .section-title {
-                font-size: 18px;
-            }
-            .item-header {
+            .intern-header {
                 flex-direction: column;
                 align-items: flex-start;
                 gap: 5px;
-            }
-            .course-list {
-                gap: 10px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="resume-card">
+    <div class="resume-container">
         <!-- 头部信息 -->
         <div class="header">
             <img src="ymy.jpg" alt="易梦园个人照片" class="avatar">
-            <div class="fullname">易梦园</div>
-            <div class="contact-info">出生年月：2003年8月 | 手机：13110235632</div>
-            <div class="contact-info">邮箱：2640414241@qq.com</div>
-            <div class="job-target">求职意向：数据分析师</div>
+            <div class="name">易梦园</div>
+            <div class="contact">出生年月：2003年8月 | 手机：13110235632</div>
+            <div class="contact">邮箱：2640414241@qq.com</div>
+            <div class="job-intention">求职意向：数据分析师</div>
         </div>
 
         <!-- 教育背景 -->
         <div class="section">
             <div class="section-title">教育背景</div>
-            <div class="education-item">
-                <div class="item-header">
-                    <div class="major-school">重庆科技大学 | 数据科学与大数据技术</div>
-                    <div class="time-period">2022.09 - 2026.06</div>
-                </div>
-                <div class="item-content">
-                    <div>主修课程：</div>
-                    <div class="course-list">
-                        <div class="course-tag">Hadoop大数据技术</div>
-                        <div class="course-tag">分布式数据库原理</div>
-                        <div class="course-tag">数据库原理与应用</div>
-                        <div class="course-tag">计算机网络B</div>
-                        <div class="course-tag">算法与数据结构</div>
-                        <div class="course-tag">Python程序开发语言</div>
-                    </div>
-                </div>
+            <div class="edu-item">
+                <div class="edu-school">重庆科技大学 | 数据科学与大数据技术</div>
+                <div class="edu-time">2022.09 - 2026.06</div>
+            </div>
+            <div>主修课程：</div>
+            <div class="course-list">
+                <div class="course-tag">Hadoop大数据技术</div>
+                <div class="course-tag">分布式数据库原理</div>
+                <div class="course-tag">数据库原理与应用</div>
+                <div class="course-tag">计算机网络B</div>
+                <div class="course-tag">算法与数据结构</div>
+                <div class="course-tag">Python程序开发语言</div>
             </div>
         </div>
 
-        <!-- 实习经历 -->
+        <!-- 实习经历（核心布局：公司左、岗位中、时间右） -->
         <div class="section">
             <div class="section-title">实习经历</div>
-            <div class="item-content">
-                <!-- 实习1 -->
-                <div class="experience-item">
-                    <div class="item-header">
-                        <div class="position-company">重庆朝天骏博商业管理有限公司 | 商场引导与激励物资发放专员</div>
-                        <div class="time-period">2022.07.10 - 2022.08.10</div>
-                    </div>
+            <!-- 实习1 -->
+            <div class="intern-item">
+                <div class="intern-header">
+                    <div class="intern-company">重庆朝天骏博商业管理有限公司</div>
+                    <div class="intern-position">商场引导与激励物资发放专员</div>
+                    <div class="intern-time">2022.07.10 - 2022.08.10</div>
+                </div>
+                <div class="intern-content">
                     <ul>
                         <li>担当商场引导先锋，每日高效指引超百位行人入场，有效提升商场初始客流量</li>
                         <li>负责奖品分发工作，精准规划流程，确保每份奖品及时无误地递至获奖者手中</li>
                     </ul>
                 </div>
-                <!-- 实习2 -->
-                <div class="experience-item">
-                    <div class="item-header">
-                        <div class="position-company">北京三快在线科技有限公司 | 美团即时配送专员</div>
-                        <div class="time-period">2024.07.10 - 2024.08.15</div>
-                    </div>
+            </div>
+            <!-- 实习2 -->
+            <div class="intern-item">
+                <div class="intern-header">
+                    <div class="intern-company">北京三快在线科技有限公司</div>
+                    <div class="intern-position">美团即时配送专员</div>
+                    <div class="intern-time">2024.07.10 - 2024.08.15</div>
+                </div>
+                <div class="intern-content">
                     <ul>
                         <li>借助大数据智能规划，每日精准完成超60单配送，高效履约获商家、顾客称赞</li>
                         <li>全程把关餐品安全与包装，主动对接商家、顾客，贴心服务满足多样需求</li>
                         <li>面对恶劣天气、交通高峰，迅速调整策略，全力保障配送工作平稳推进</li>
                     </ul>
                 </div>
-                <!-- 实习3 -->
-                <div class="experience-item">
-                    <div class="item-header">
-                        <div class="position-company">砺之教育家教中心 | 初中辅导家教</div>
-                        <div class="time-period">2024.11.01 - 至今</div>
-                    </div>
+            </div>
+            <!-- 实习3 -->
+            <div class="intern-item">
+                <div class="intern-header">
+                    <div class="intern-company">砺之教育家教中心</div>
+                    <div class="intern-position">初中辅导家教</div>
+                    <div class="intern-time">2024.11.01 - 至今</div>
+                </div>
+                <div class="intern-content">
                     <ul>
                         <li>负责一名初二学生的数学辅导，并对其进行具体知识点的讲解、练习及巩固，使其成绩由100分提高到120分</li>
                     </ul>
                 </div>
-                <!-- 实习4 -->
-                <div class="experience-item">
-                    <div class="item-header">
-                        <div class="position-company">北京安捷智合科技有限公司 | 数据标注员</div>
-                        <div class="time-period">2025.07.03 - 2025.09.03</div>
-                    </div>
+            </div>
+            <!-- 实习4 -->
+            <div class="intern-item">
+                <div class="intern-header">
+                    <div class="intern-company">北京安捷智合科技有限公司</div>
+                    <div class="intern-position">数据标注员</div>
+                    <div class="intern-time">2025.07.03 - 2025.09.03</div>
+                </div>
+                <div class="intern-content">
                     <ul>
                         <li>负责文字、图片团队协作处理批量任务，高效沟通需求，保障项目按时完成</li>
                         <li>使用专业工具进行数据标注，日均标注超200条，准确率98%以上</li>
@@ -221,9 +254,9 @@
         </div>
 
         <!-- 校园经历 -->
-        <div class="section">
+        <div class="other-section">
             <div class="section-title">校园经历</div>
-            <div class="item-content">
+            <div class="other-content">
                 <ul>
                     <li><strong>生活委员</strong>：精心采买班级物资，合理安排卫生值日，营造良好环境</li>
                     <li><strong>团支书</strong>：精心策划团日活动，积极宣传党团知识，有效提升班级思想建设</li>
@@ -232,9 +265,9 @@
         </div>
 
         <!-- 技能证书 -->
-        <div class="section">
+        <div class="other-section">
             <div class="section-title">技能证书</div>
-            <div class="item-content">
+            <div class="other-content">
                 <ul>
                     <li>全国大学英语四级证书</li>
                     <li>机动车驾驶证</li>
@@ -243,9 +276,9 @@
         </div>
 
         <!-- 自我评价 -->
-        <div class="section">
+        <div class="other-section">
             <div class="section-title">自我评价</div>
-            <div class="item-content">
+            <div class="other-content">
                 <ul>
                     <li>高自驱，强目标，渴望成功，勇于担当，开朗热情</li>
                     <li>勤学习，常进取，熟练掌握各类办公软件，适应行业变化需求</li>
