--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             background-color: white;
             border-radius: 8px;
             padding: 50px;
+            box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
         }
         /* 头部信息 */
         .header {
@@ -36,6 +37,8 @@
             object-fit: cover;
             margin: 0 auto 20px;
             border: 2px solid #e6f7ff;
+            background-color: #f0f8fb;
+            display: block;
         }
         .name {
             font-size: 32px;
@@ -72,11 +75,17 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
         .edu-school {
             font-size: 16px;
             color: #222;
+        }
+        .edu-major {
+            text-align: center;
+            font-size: 16px;
+            color: #222;
+            margin-bottom: 15px;
         }
         .edu-time {
             font-size: 14px;
@@ -95,7 +104,7 @@
             border-radius: 18px;
             font-size: 14px;
         }
-        /* 实习经历 - 核心布局：公司靠左、岗位居中、时间靠右 */
+        /* 实习经历 */
         .intern-item {
             margin-bottom: 25px;
         }
@@ -104,11 +113,15 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 10px;
+            position: relative;
+            padding: 0 120px;
         }
         .intern-company {
             font-size: 16px;
             color: #222;
             font-weight: 500;
+            position: absolute;
+            left: 0;
         }
         .intern-position {
             position: absolute;
@@ -117,10 +130,13 @@
             font-size: 16px;
             color: #222;
             font-weight: 500;
+            text-align: center;
         }
         .intern-time {
             font-size: 14px;
             color: #888;
+            position: absolute;
+            right: 0;
         }
         .intern-content {
             font-size: 15px;
@@ -148,144 +164,152 @@
             .resume-container {
                 padding: 30px 15px;
             }
-            .intern-position {
-                position: static;
-                transform: none;
-                margin: 5px 0;
-                text-align: left;
-            }
             .intern-header {
                 flex-direction: column;
                 align-items: flex-start;
                 gap: 5px;
+                padding: 0;
+            }
+            .intern-company, .intern-position, .intern-time {
+                position: static;
+                transform: none;
+                margin: 2px 0;
+            }
+            .avatar {
+                width: 120px;
+                height: 150px;
+            }
+            .name {
+                font-size: 28px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="resume-container">
-        <!-- 头部信息 -->
-        <div class="header">
-            <img src="ymy.jpg" alt="易梦园个人照片" class="avatar">
-            <div class="name">易梦园</div>
-            <div class="contact">出生年月：2003年8月 | 手机：13110235632</div>
-            <div class="contact">邮箱：2640414241@qq.com</div>
-            <div class="job-intention">求职意向：数据分析师</div>
-        </div>
+<main class="resume-container">
+    <!-- 头部信息 -->
+    <header class="header">
+        <img src="ymy.jpg" alt="易梦园个人照片" class="avatar" onerror="this.src='https://via.placeholder.com/140x180?text=头像';">
+        <h1 class="name">易梦园</h1>
+        <div class="contact">出生年月：2003年8月 | 手机：13110235632</div>
+        <div class="contact">邮箱：2640414241@qq.com</div>
+        <div class="job-intention">求职意向：数据分析师</div>
+    </header>
 
-        <!-- 教育背景 -->
-        <div class="section">
-            <div class="section-title">教育背景</div>
-            <div class="edu-item">
-                <div class="edu-school">重庆科技大学 | 数据科学与大数据技术</div>
-                <div class="edu-time">2022.09 - 2026.06</div>
-            </div>
-            <div>主修课程：</div>
-            <div class="course-list">
-                <div class="course-tag">Hadoop大数据技术</div>
-                <div class="course-tag">分布式数据库原理</div>
-                <div class="course-tag">数据库原理与应用</div>
-                <div class="course-tag">计算机网络B</div>
-                <div class="course-tag">算法与数据结构</div>
-                <div class="course-tag">Python程序开发语言</div>
-            </div>
+    <!-- 教育背景 -->
+    <section class="section">
+        <h2 class="section-title">教育背景</h2>
+        <div class="edu-item">
+            <div class="edu-school">重庆科技大学</div>
+            <div class="edu-time">2022.09 - 2026.06</div>
         </div>
-
-        <!-- 实习经历（核心布局：公司左、岗位中、时间右） -->
-        <div class="section">
-            <div class="section-title">实习经历</div>
-            <!-- 实习1 -->
-            <div class="intern-item">
-                <div class="intern-header">
-                    <div class="intern-company">重庆朝天骏博商业管理有限公司</div>
-                    <div class="intern-position">商场引导与激励物资发放专员</div>
-                    <div class="intern-time">2022.07.10 - 2022.08.10</div>
-                </div>
-                <div class="intern-content">
-                    <ul>
-                        <li>担当商场引导先锋，每日高效指引超百位行人入场，有效提升商场初始客流量</li>
-                        <li>负责奖品分发工作，精准规划流程，确保每份奖品及时无误地递至获奖者手中</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- 实习2 -->
-            <div class="intern-item">
-                <div class="intern-header">
-                    <div class="intern-company">北京三快在线科技有限公司</div>
-                    <div class="intern-position">美团即时配送专员</div>
-                    <div class="intern-time">2024.07.10 - 2024.08.15</div>
-                </div>
-                <div class="intern-content">
-                    <ul>
-                        <li>借助大数据智能规划，每日精准完成超60单配送，高效履约获商家、顾客称赞</li>
-                        <li>全程把关餐品安全与包装，主动对接商家、顾客，贴心服务满足多样需求</li>
-                        <li>面对恶劣天气、交通高峰，迅速调整策略，全力保障配送工作平稳推进</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- 实习3 -->
-            <div class="intern-item">
-                <div class="intern-header">
-                    <div class="intern-company">砺之教育家教中心</div>
-                    <div class="intern-position">初中辅导家教</div>
-                    <div class="intern-time">2024.11.01 - 至今</div>
-                </div>
-                <div class="intern-content">
-                    <ul>
-                        <li>负责一名初二学生的数学辅导，并对其进行具体知识点的讲解、练习及巩固，使其成绩由100分提高到120分</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- 实习4 -->
-            <div class="intern-item">
-                <div class="intern-header">
-                    <div class="intern-company">北京安捷智合科技有限公司</div>
-                    <div class="intern-position">数据标注员</div>
-                    <div class="intern-time">2025.07.03 - 2025.09.03</div>
-                </div>
-                <div class="intern-content">
-                    <ul>
-                        <li>负责文字、图片团队协作处理批量任务，高效沟通需求，保障项目按时完成</li>
-                        <li>使用专业工具进行数据标注，日均标注超200条，准确率98%以上</li>
-                        <li>严格执行标注标准，自查数据质量，主动反馈问题优化流程</li>
-                    </ul>
-                </div>
-            </div>
+        <div class="edu-major">数据科学与大数据技术</div>
+        <div>主修课程：</div>
+        <div class="course-list">
+            <span class="course-tag">Hadoop大数据技术</span>
+            <span class="course-tag">分布式数据库原理</span>
+            <span class="course-tag">数据库原理与应用</span>
+            <span class="course-tag">计算机网络B</span>
+            <span class="course-tag">算法与数据结构</span>
+            <span class="course-tag">Python程序开发语言</span>
         </div>
+    </section>
 
-        <!-- 校园经历 -->
-        <div class="other-section">
-            <div class="section-title">校园经历</div>
-            <div class="other-content">
+    <!-- 实习经历 -->
+    <section class="section">
+        <h2 class="section-title">实习经历</h2>
+        <!-- 实习1 -->
+        <article class="intern-item">
+            <div class="intern-header">
+                <div class="intern-company">重庆朝天骏博商业管理有限公司</div>
+                <div class="intern-position">商场引导与激励物资发放专员</div>
+                <div class="intern-time">2022.07.10 - 2022.08.10</div>
+            </div>
+            <div class="intern-content">
                 <ul>
-                    <li><strong>生活委员</strong>：精心采买班级物资，合理安排卫生值日，营造良好环境</li>
-                    <li><strong>团支书</strong>：精心策划团日活动，积极宣传党团知识，有效提升班级思想建设</li>
+                    <li>担当商场引导先锋，每日高效指引超百位行人入场，有效提升商场初始客流量</li>
+                    <li>负责奖品分发工作，精准规划流程，确保每份奖品及时无误地递至获奖者手中</li>
                 </ul>
             </div>
-        </div>
-
-        <!-- 技能证书 -->
-        <div class="other-section">
-            <div class="section-title">技能证书</div>
-            <div class="other-content">
+        </article>
+        <!-- 实习2 -->
+        <article class="intern-item">
+            <div class="intern-header">
+                <div class="intern-company">北京三快在线科技有限公司</div>
+                <div class="intern-position">美团即时配送专员</div>
+                <div class="intern-time">2024.07.10 - 2024.08.15</div>
+            </div>
+            <div class="intern-content">
                 <ul>
-                    <li>全国大学英语四级证书</li>
-                    <li>机动车驾驶证</li>
+                    <li>借助大数据智能规划，每日精准完成超60单配送，高效履约获商家、顾客称赞</li>
+                    <li>全程把关餐品安全与包装，主动对接商家、顾客，贴心服务满足多样需求</li>
+                    <li>面对恶劣天气、交通高峰，迅速调整策略，全力保障配送工作平稳推进</li>
                 </ul>
             </div>
-        </div>
-
-        <!-- 自我评价 -->
-        <div class="other-section">
-            <div class="section-title">自我评价</div>
-            <div class="other-content">
+        </article>
+        <!-- 实习3 -->
+        <article class="intern-item">
+            <div class="intern-header">
+                <div class="intern-company">砺之教育家教中心</div>
+                <div class="intern-position">初中辅导家教</div>
+                <div class="intern-time">2024.11.01 - 至今</div>
+            </div>
+            <div class="intern-content">
                 <ul>
-                    <li>高自驱，强目标，渴望成功，勇于担当，开朗热情</li>
-                    <li>勤学习，常进取，熟练掌握各类办公软件，适应行业变化需求</li>
-                    <li>严律己，重细节，高标准执行工作任务</li>
+                    <li>负责一名初二学生的数学辅导，并对其进行具体知识点的讲解、练习及巩固，使其成绩由100分提高到120分</li>
                 </ul>
             </div>
+        </article>
+        <!-- 实习4 -->
+        <article class="intern-item">
+            <div class="intern-header">
+                <div class="intern-company">北京安捷智合科技有限公司</div>
+                <div class="intern-position">数据标注员</div>
+                <div class="intern-time">2025.07.03 - 2025.09.03</div>
+            </div>
+            <div class="intern-content">
+                <ul>
+                    <li>负责文字、图片团队协作处理批量任务，高效沟通需求，保障项目按时完成</li>
+                    <li>使用专业工具进行数据标注，日均标注超200条，准确率98%以上</li>
+                    <li>严格执行标注标准，自查数据质量，主动反馈问题优化流程</li>
+                </ul>
+            </div>
+        </article>
+    </section>
+
+    <!-- 校园经历 -->
+    <section class="other-section">
+        <h2 class="section-title">校园经历</h2>
+        <div class="other-content">
+            <ul>
+                <li><strong>生活委员</strong>：精心采买班级物资，合理安排卫生值日，营造良好环境</li>
+                <li><strong>团支书</strong>：精心策划团日活动，积极宣传党团知识，有效提升班级思想建设</li>
+            </ul>
         </div>
-    </div>
+    </section>
+
+    <!-- 技能证书 -->
+    <section class="other-section">
+        <h2 class="section-title">技能证书</h2>
+        <div class="other-content">
+            <ul>
+                <li>全国大学英语四级证书</li>
+                <li>机动车驾驶证</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- 自我评价 -->
+    <section class="other-section">
+        <h2 class="section-title">自我评价</h2>
+        <div class="other-content">
+            <ul>
+                <li>高自驱，强目标，渴望成功，勇于担当，开朗热情</li>
+                <li>勤学习，常进取，熟练掌握各类办公软件，适应行业变化需求</li>
+                <li>严律己，重细节，高标准执行工作任务</li>
+            </ul>
+        </div>
+    </section>
+</main>
 </body>
 </html>
